[gd_scene load_steps=10 format=3 uid="uid://dw0olb1a80i2s"]

[ext_resource type="PackedScene" uid="uid://baryd3ae1wo6s" path="res://house/house.tscn" id="1_l31aa"]
[ext_resource type="Script" path="res://game.gd" id="1_ptp86"]
[ext_resource type="PackedScene" uid="uid://j72804edpiwd" path="res://features/catalogue/catalogue.tscn" id="2_4bl3y"]
[ext_resource type="Shader" path="res://shaders/4_bit_colour.gdshader" id="2_8mvdw"]
[ext_resource type="FontFile" uid="uid://bexq03pmtmlcr" path="res://fonts/pixel_arial_bold.TTF" id="3_uee2l"]
[ext_resource type="PackedScene" uid="uid://v7dqxgwyx1kd" path="res://features/fur/fur.tscn" id="4_2vsee"]
[ext_resource type="PackedScene" uid="uid://c8hp1xr2183is" path="res://features/cat_collection_screen/cat_collection_screen.tscn" id="6_d8ade"]
[ext_resource type="PackedScene" uid="uid://c3pyp3j2d7wqj" path="res://features/conversation/conversation.tscn" id="8_2ciiy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tcxfg"]
shader = ExtResource("2_8mvdw")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ptp86")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0, 0.176471, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_tcxfg")
layout_mode = 2
mouse_default_cursor_shape = 3

[node name="SubViewport" type="SubViewport" parent="MarginContainer/HBoxContainer/SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(380, 320)
render_target_update_mode = 4

[node name="House" parent="MarginContainer/HBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("1_l31aa")]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(190, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 30

[node name="FUR" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_2vsee")]
custom_minimum_size = Vector2(2.08165e-12, 145)
layout_mode = 2

[node name="Text" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_uee2l")
theme_override_font_sizes/font_size = 16
text = "Open
CATalogue"

[node name="Catalogue" parent="." instance=ExtResource("2_4bl3y")]
visible = false
layout_mode = 1

[node name="CatCollectionScreen" parent="." instance=ExtResource("6_d8ade")]
visible = false
layout_mode = 1

[node name="Curtain" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Conversation" parent="." instance=ExtResource("8_2ciiy")]
visible = false
layout_mode = 1

[connection signal="cat_collected" from="MarginContainer/HBoxContainer/SubViewportContainer/SubViewport/House" to="." method="_on_house_cat_collected"]
[connection signal="viewpoint_changed" from="MarginContainer/HBoxContainer/SubViewportContainer/SubViewport/House" to="." method="_on_house_viewpoint_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Text/Button" to="." method="_on_Catalogue_button_pressed"]
[connection signal="closed" from="CatCollectionScreen" to="." method="_on_cat_collection_screen_closed"]
